# lu

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
include/: lu.h  tohuman.h  version.h
man/: lu.1
src/: lu.c  tohuman.c  version.c
tests/: basic.sh
